# humble-rss

./: Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: default.yaml
humble_rss/: __init__.py  rss.py  wsgi.py
humble_rss/templates/: index.html
