[tool.poetry]
name = "humble-rss"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "humble_rss"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
beautifulsoup4 = "^4.11.1"
feedgen = "^0.9.0"
flask = "^2.2.2"
flask-caching = "^2.0.1"
html5lib = "^1.1"
pytz = "^2022.6"
requests = "^2.28.1"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.2.0"
watchdog = "^2.1.9"
types-beautifulsoup4 = "^4.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
